--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: no_bloc
 description: Making blocs easy again. A simplified library for the original bloc approach.
-version: 0.1.0
-homepage: https://github.com/MohiuddinM/no
+version: 0.1.1
+homepage: https://github.com/MohiuddinM/no_bloc
+
 environment:
   sdk: '>=2.7.0 <3.0.0'
 
